--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -59,154 +59,152 @@
     <string name="forgot_pw_hint_email">آدرس ایمیل خود را وارد کنید</string>
     <string name="forgot_pw_btn_send">ارسال ایمیل</string>
     <string name="forgot_pw_btn_return">بازگشت به صفحه ورود</string>
-    <string name="forgot_pw_error_timer_is_not_zero_one">لطفاً قبل از درخواست مجدد، %1$d ثانیه منتظر بمانید…</string>
-    <string name="forgot_pw_error_timer_is_not_zero_other">لطفاً قبل از درخواست مجدد، %1$d ثانیه منتظر بمانید…</string>
+    <string name="forgot_pw_error_timer_is_not_zero_one">لطفاً قبل از درخواست مجدد، %d ثانیه منتظر بمانید…</string>
+    <string name="forgot_pw_error_timer_is_not_zero_other">لطفاً قبل از درخواست مجدد، %d ثانیه منتظر بمانید…</string>
     <string name="forgot_pw_error_email">آدرس ایمیل وارد شده، معتبر نیست!</string>
     <string name="forgot_pw_error_not_found">حسابی با ایمیل وارد شده وجود ندارد.</string>
 
     <!--Forgot Password Sent Fragment-->
     <string name="forgot_pw_sent_text_title">صندوق ایمیل\nخود را\nبررسی کنید</string>
-    <string name="forgot_pw_sent_text_description">Please check your inbox and click on the received link to reset your password.</string>
-    <string name="forgot_pw_sent_text_resend">Didn\'t receive the link?</string>
+    <string name="forgot_pw_sent_text_description">لطفا صندوق ایمیل خود را بررسی کنید و روی لینک دریافتی کلیک کنید تا رمز‌عبور خود را بازیابی کنید.</string>
+    <string name="forgot_pw_sent_text_resend">لینکی را دریافت نکردید؟</string>
     <string name="forgot_pw_sent_btn_resend">ارسال مجدد</string>
-    <string name="forgot_pw_sent_text_first_time">The email has been sent.</string>
-    <string name="forgot_pw_sent_text_resent">A new email has been sent.</string>
+    <string name="forgot_pw_sent_text_first_time">ایمیل ارسال شد.</string>
+    <string name="forgot_pw_sent_text_resent">ایمیل مجددا ارسال شد.</string>
     <string name="forgot_pw_sent_btn_return">بازگشت به صفحه ورود</string>
 
     <!--Main Activity-->
-    <string name="main_menu_title_warranties">Warranty List</string>
+    <string name="main_menu_title_warranties">فهرست گارانتی‌ها</string>
     <string name="main_menu_title_settings">تنظیمات</string>
-    <string name="main_text_content_description">Add Warranty</string>
+    <string name="main_text_content_description">افزودن گارانتی</string>
 
     <!--Warranties Fragment-->
-    <string name="warranties_text_title">Warranty List</string>
-    <string name="warranties_menu_hint_search">Search by title…</string>
-    <string name="warranties_text_empty_list">There is currently no warranty on your list. You can add a warranty by clicking on the <font fgcolor="#1C53F4">Add Button</font>.</string>
-    <string name="warranties_list_status_valid">Valid</string>
-    <string name="warranties_list_status_soon">Soon</string>
-    <string name="warranties_list_status_expired">Expired</string>
-    <string name="warranties_list_is_lifetime">Lifetime Warranty</string>
-    <string name="warranties_list_ad_logo_content_description">Ad Logo</string>
-    <string name="warranties_list_ad_indicator">Ad</string>
+    <string name="warranties_text_title">فهرست گارانتی‌ها</string>
+    <string name="warranties_menu_hint_search">جستجو بر اساس عنوان…</string>
+    <string name="warranties_text_empty_list">در حال حاضر هیچ گارانتی در لیست شما وجود ندارد. با کلیک بر روی <font fgcolor="#1C53F4">دکمه افزودن</font> می‌توانید یک گارانتی اضافه کنید.</string>
+    <string name="warranties_list_status_valid">معتبر</string>
+    <string name="warranties_list_status_soon">به‌زودی</string>
+    <string name="warranties_list_status_expired">منقضی‌شده</string>
+    <string name="warranties_list_is_lifetime">گارانتی مادام‌العمر</string>
 
     <!--Add Warranty Fragment-->
-    <string name="add_warranty_text_title">Add Warranty</string>
-    <string name="add_warranty_menu_title_add">Add Warranty</string>
-    <string name="add_warranty_title_title">Title</string>
-    <string name="add_warranty_hint_title">Enter the title</string>
-    <string name="add_warranty_title_category">Category</string>
-    <string name="add_warranty_hint_category">Select category</string>
-    <string name="add_warranty_title_brand">Device Brand</string>
-    <string name="add_warranty_hint_brand">Enter the device brand</string>
-    <string name="add_warranty_title_model">Device Model</string>
-    <string name="add_warranty_hint_model">Enter the device model</string>
-    <string name="add_warranty_title_serial">Serial Number</string>
-    <string name="add_warranty_hint_serial">Enter the serial number of the device</string>
-    <string name="add_warranty_title_description">Description</string>
-    <string name="add_warranty_hint_description">Enter description</string>
-    <string name="add_warranty_title_date_starting">Starting Date</string>
-    <string name="add_warranty_title_date_expiry">Expiry Date</string>
-    <string name="add_warranty_hint_date">mm/dd/yyyy</string>
-    <string name="add_warranty_title_date_picker_starting">Select Starting Date</string>
-    <string name="add_warranty_title_date_picker_expiry">Select Expiry Date</string>
-    <string name="add_warranty_error_date">Starting Date can\'t be after the Expiry Date!</string>
-    <string name="add_warranty_checkbox_lifetime">Lifetime Warranty</string>
+    <string name="add_warranty_text_title">افزودن گارانتی</string>
+    <string name="add_warranty_menu_title_add">افزودن گارانتی</string>
+    <string name="add_warranty_title_title">عنوان</string>
+    <string name="add_warranty_hint_title">عنوان را وارد کنید</string>
+    <string name="add_warranty_title_category">دسته‌بندی</string>
+    <string name="add_warranty_hint_category">دسته‌بندی را انتخاب کنید</string>
+    <string name="add_warranty_title_brand">برند دستگاه</string>
+    <string name="add_warranty_hint_brand">برند دستگاه را وارد کنید</string>
+    <string name="add_warranty_title_model">مدل دستگاه</string>
+    <string name="add_warranty_hint_model">مدل دستگاه را وارد کنید</string>
+    <string name="add_warranty_title_serial">شماره سریال</string>
+    <string name="add_warranty_hint_serial">شماره سریال دستگاه را وارد کنید</string>
+    <string name="add_warranty_title_description">توضیحات</string>
+    <string name="add_warranty_hint_description">توضیحات را وارد کنید</string>
+    <string name="add_warranty_title_date_starting">تاریخ شروع</string>
+    <string name="add_warranty_title_date_expiry">تاریخ اتمام</string>
+    <string name="add_warranty_hint_date">روز/ماه/سال</string>
+    <string name="add_warranty_title_date_picker_starting">تاریخ شروع را انتخاب کنید</string>
+    <string name="add_warranty_title_date_picker_expiry">تاریخ اتمام را انتخاب کنید</string>
+    <string name="add_warranty_error_date">تاریخ شروع نمی‌تواند بعد از تاریخ اتمام باشد!</string>
+    <string name="add_warranty_checkbox_lifetime">گارانتی مادام‌العمر</string>
 
     <!--Warranty Details Fragment-->
-    <string name="warranty_details_fab_edit">Edit</string>
-    <string name="warranty_details_menu_title_delete">Delete Warranty</string>
-    <string name="warranty_details_title_date_starting">Starting Date</string>
-    <string name="warranty_details_title_date_expiry">Expiry Date</string>
-    <string name="warranty_details_title_device">Device Info</string>
-    <string name="warranty_details_title_device_brand">Brand</string>
-    <string name="warranty_details_title_device_model">Model</string>
-    <string name="warranty_details_title_device_serial">Serial Number</string>
-    <string name="warranty_details_title_description">Description</string>
-    <string name="warranty_details_status_valid">Warranty is valid</string>
-    <string name="warranty_details_status_soon">Warranty will expire soon</string>
-    <string name="warranty_details_status_expired">Warranty is expired</string>
-    <string name="warranty_details_is_lifetime">Lifetime</string>
-    <string name="warranty_details_empty_description">No description is provided.</string>
-    <string name="warranty_details_delete_dialog_title">Delete Warranty?</string>
-    <string name="warranty_details_delete_dialog_message">Are you sure you want to delete %s?</string>
-    <string name="warranty_details_delete_dialog_positive">Delete</string>
-    <string name="warranty_details_delete_dialog_negative">Cancel</string>
-    <string name="warranty_details_delete_success">%s has been successfully deleted.</string>
+    <string name="warranty_details_fab_edit">ویرایش</string>
+    <string name="warranty_details_menu_title_delete">حذف گارانتی</string>
+    <string name="warranty_details_title_date_starting">تاریخ شروع</string>
+    <string name="warranty_details_title_date_expiry">تاریخ اتمام</string>
+    <string name="warranty_details_title_device">اطلاعات دستگاه</string>
+    <string name="warranty_details_title_device_brand">برند</string>
+    <string name="warranty_details_title_device_model">مدل</string>
+    <string name="warranty_details_title_device_serial">شماره سریال</string>
+    <string name="warranty_details_title_description">توضیحات</string>
+    <string name="warranty_details_status_valid">گارانتی معتبر است</string>
+    <string name="warranty_details_status_soon">گارانتی به‌زودی منقضی می‌شود</string>
+    <string name="warranty_details_status_expired">گارانتی منقضی شده</string>
+    <string name="warranty_details_is_lifetime">مادام‌العمر</string>
+    <string name="warranty_details_empty_description">هیچ توضیحی وارد نشده.</string>
+    <string name="warranty_details_delete_dialog_title">گارانتی حذف شود؟</string>
+    <string name="warranty_details_delete_dialog_message">آیا مطمئنید که می‌خواهید %s را حذف کنید؟</string>
+    <string name="warranty_details_delete_dialog_positive">حذف</string>
+    <string name="warranty_details_delete_dialog_negative">لغو</string>
+    <string name="warranty_details_delete_success">%s با موفقیت حذف شد.</string>
 
     <!--Edit Warranty Fragment-->
-    <string name="edit_warranty_text_title">Edit Warranty</string>
-    <string name="edit_warranty_menu_title_edit">Edit Warranty</string>
-    <string name="edit_warranty_title_title">Title</string>
-    <string name="edit_warranty_hint_title">Enter the title</string>
-    <string name="edit_warranty_title_category">Category</string>
-    <string name="edit_warranty_hint_category">Select category</string>
-    <string name="edit_warranty_title_brand">Device Brand</string>
-    <string name="edit_warranty_hint_brand">Enter the device brand</string>
-    <string name="edit_warranty_title_model">Device Model</string>
-    <string name="edit_warranty_hint_model">Enter the device model</string>
-    <string name="edit_warranty_title_serial">Serial Number</string>
-    <string name="edit_warranty_hint_serial">Enter the serial number of the device</string>
-    <string name="edit_warranty_title_description">Description</string>
-    <string name="edit_warranty_hint_description">Enter description</string>
-    <string name="edit_warranty_title_date_starting">Starting Date</string>
-    <string name="edit_warranty_title_date_expiry">Expiry Date</string>
-    <string name="edit_warranty_hint_date">mm/dd/yyyy</string>
-    <string name="edit_warranty_title_date_picker_starting">Select Starting Date</string>
-    <string name="edit_warranty_title_date_picker_expiry">Select Expiry Date</string>
-    <string name="edit_warranty_error_date">Starting Date can\'t be after the Expiry Date!</string>
-    <string name="edit_warranty_checkbox_lifetime">Lifetime Warranty</string>
+    <string name="edit_warranty_text_title">ویرایش گارانتی</string>
+    <string name="edit_warranty_menu_title_edit">ویرایش گارانتی</string>
+    <string name="edit_warranty_title_title">عنوان</string>
+    <string name="edit_warranty_hint_title">عنوان را وارد کنید</string>
+    <string name="edit_warranty_title_category">دسته‌بندی</string>
+    <string name="edit_warranty_hint_category">دسته‌بندی را انتخاب کنید</string>
+    <string name="edit_warranty_title_brand">برند دستگاه</string>
+    <string name="edit_warranty_hint_brand">برند دستگاه را وارد کنید</string>
+    <string name="edit_warranty_title_model">مدل دستگاه</string>
+    <string name="edit_warranty_hint_model">مدل دستگاه را وارد کنید</string>
+    <string name="edit_warranty_title_serial">شماره سریال</string>
+    <string name="edit_warranty_hint_serial">شماره سریال دستگاه را وارد کنید</string>
+    <string name="edit_warranty_title_description">توضیحات</string>
+    <string name="edit_warranty_hint_description">توضیحات را وارد کنید</string>
+    <string name="edit_warranty_title_date_starting">تاریخ شروع</string>
+    <string name="edit_warranty_title_date_expiry">تاریخ اتمام</string>
+    <string name="edit_warranty_hint_date">روز/ماه/سال</string>
+    <string name="edit_warranty_title_date_picker_starting">تاریخ شروع را انتخاب کنید</string>
+    <string name="edit_warranty_title_date_picker_expiry">تاریخ اتمام را انتخاب کنید</string>
+    <string name="edit_warranty_error_date">تاریخ شروع نمی‌تواند بعد از تاریخ اتمام باشد!</string>
+    <string name="edit_warranty_checkbox_lifetime">گارانتی مادام‌العمر</string>
 
     <!--Settings Fragment-->
     <string name="settings_text_title">تنظیمات</string>
-    <string name="settings_title_account">Account</string>
+    <string name="settings_title_account">حساب کاربری</string>
     <string name="settings_title_settings">تنظیمات</string>
-    <string name="settings_btn_account_verify">Verify Email</string>
-    <string name="settings_btn_account_verified">Verified</string>
-    <string name="settings_text_account_change_email">Change Email</string>
-    <string name="settings_text_account_change_password">Change Password</string>
+    <string name="settings_btn_account_verify">تایید ایمیل</string>
+    <string name="settings_btn_account_verified">تایید شده</string>
+    <string name="settings_text_account_change_email">تغییر آدرس ایمیل</string>
+    <string name="settings_text_account_change_password">تغییر رمز‌عبور</string>
     <string name="settings_text_settings_language">زبان</string>
     <string name="settings_text_settings_language_english">انگلیسی</string>
     <string name="settings_text_settings_language_persian">فارسی</string>
-    <string name="settings_text_settings_theme">Theme</string>
-    <string name="settings_text_settings_theme_default">System Default</string>
-    <string name="settings_text_settings_theme_light">Light</string>
-    <string name="settings_text_settings_theme_dark">Dark</string>
+    <string name="settings_text_settings_theme">تم</string>
+    <string name="settings_text_settings_theme_default">پیش‌فرض سیستم</string>
+    <string name="settings_text_settings_theme_light">روشن</string>
+    <string name="settings_text_settings_theme_dark">تیره</string>
     <string name="settings_text_settings_donate">حمایت</string>
     <string name="settings_text_settings_privacy_policy">حریم خصوصی</string>
     <string name="settings_btn_logout">خروج</string>
-    <string name="settings_dialog_message">The verification email has been successfully sent to your inbox.</string>
+    <string name="settings_dialog_message">ایمیل تأیید با موفقیت به صندوق ایمیلتان ارسال شد.</string>
     <string name="settings_dialog_positive">تایید</string>
 
     <!--Change Password Fragment-->
-    <string name="change_password_text_title">Change Password</string>
-    <string name="change_password_title_current">Current Password</string>
-    <string name="change_password_hint_current">Enter your current password</string>
-    <string name="change_password_title_new">New Password</string>
-    <string name="change_password_hint_new">Enter a new password</string>
-    <string name="change_password_title_retype">Retype New Password</string>
-    <string name="change_password_hint_retype">Retype the new password</string>
-    <string name="change_password_btn_change">Change Password</string>
+    <string name="change_password_text_title">تغییر رمز‌عبور</string>
+    <string name="change_password_title_current">رمز‌عبور فعلی</string>
+    <string name="change_password_hint_current">رمز‌عبور فعلی خود را وارد کنید</string>
+    <string name="change_password_title_new">رمز‌عبور جدید</string>
+    <string name="change_password_hint_new">رمز‌عبور جدیدی را وارد کنید</string>
+    <string name="change_password_title_retype">تکرار رمز‌عبور جدید</string>
+    <string name="change_password_hint_retype">رمز‌عبور جدید را مجددا وارد کنید</string>
+    <string name="change_password_btn_change">تغییر رمز‌عبور</string>
     <string name="change_password_helper_password_weak">ضعیف</string>
-    <string name="change_password_helper_password_mediocre">Mediocre</string>
+    <string name="change_password_helper_password_mediocre">متوسط</string>
     <string name="change_password_helper_password_strong">قوی</string>
-    <string name="change_password_error_password_short">Password should be at least 6 characters!</string>
-    <string name="change_password_error_match">New password and retype new password do not match!</string>
-    <string name="change_password_error_credentials">The provided credentials are incorrect.</string>
-    <string name="change_password_dialog_message">Your password has been successfully changed.</string>
-    <string name="change_password_dialog_positive">Confirm</string>
+    <string name="change_password_error_password_short">رمز‌عبور باید حداقل 6 کاراکتر باشد!</string>
+    <string name="change_password_error_match">رمز‌عبور جدید و تکرار رمز‌عبور جدید وارد شده با هم مطابقت ندارند!</string>
+    <string name="change_password_error_credentials">رمز‌عبور فعلی وارد شده نادرست است.</string>
+    <string name="change_password_dialog_message">رمز‌عبور شما با موفقیت تغییر کرد.</string>
+    <string name="change_password_dialog_positive">تایید</string>
 
     <!--Change Email Fragment-->
-    <string name="change_email_text_title">Change Email</string>
-    <string name="change_email_title_password">Password</string>
-    <string name="change_email_hint_password">Enter your password</string>
-    <string name="change_email_title_new_email">New Email Address</string>
-    <string name="change_email_hint_new_email">Enter a new email address</string>
-    <string name="change_email_btn_change">Change Email</string>
-    <string name="change_email_error_new_email">New email address is not valid!</string>
-    <string name="change_email_error_credentials">The provided credentials are incorrect.</string>
-    <string name="change_email_error_email_same">New email cannot be the same as your current email!</string>
-    <string name="change_email_error_email_exists">An account with the provided email already exists.</string>
-    <string name="change_email_dialog_message">Your email has been successfully changed.</string>
-    <string name="change_email_dialog_positive">Confirm</string>
+    <string name="change_email_text_title">تغییر آدرس ایمیل</string>
+    <string name="change_email_title_password">رمز‌عبور</string>
+    <string name="change_email_hint_password">رمز‌عبور خود را وارد کنید</string>
+    <string name="change_email_title_new_email">آدرس ایمیل جدید</string>
+    <string name="change_email_hint_new_email">آدرس ایمیل جدیدی را وارد کنید</string>
+    <string name="change_email_btn_change">تغییر ایمیل</string>
+    <string name="change_email_error_new_email">آدرس ایمیل جدید وارد شده، معتبر نیست!</string>
+    <string name="change_email_error_credentials">رمز‌عبور وارد شده نادرست است.</string>
+    <string name="change_email_error_email_same">آدرس ایمیل جدید نمی‌تواند با ایمیل فعلیتان یکسان باشد!</string>
+    <string name="change_email_error_email_exists">حسابی با ایمیل وارد شده از قبل وجود دارد.</string>
+    <string name="change_email_dialog_message">آدرس ایمیل شما با موفقیت تغییر کرد.</string>
+    <string name="change_email_dialog_positive">تایید</string>
 
 </resources>
